<resources>
    <string name="app_name">The Ready State</string>
    <string name="server_client_id">212450975274-4mb45tjae8b60cp6ek91730kjqteo1rp.apps.googleusercontent.com</string>
    <string name="facebook_app_id">241066817221444</string>
    <string name="fb_login_protocol_scheme">fb241066817221444</string>
    <string name="action_refresh">Refresh</string>
    <string name="failure_network_connection">We\'re having difficulty connecting to the internet. Please check your connection.</string>
    <string name="failure_server_error">Server Error</string>
    <string name="failure_movies_list_unavailable">Movies Unavailable.</string>
    <string name="failure_movie_non_existent">Movie Not Existent.</string>
    <string name="media_route_menu_title">Play on&#8230;</string>
    <string name="app_id">4F8B3438</string>
    <string name="channel_id">rts_channel</string>
    <string name="my_favorites">My Favorites</string>
    <string name="my_equipment">My Equipment</string>
    <string name="my_membership">My Membership</string>
    <string name="my_downloads">My Downloads</string>
    <string name="help_center">Help Center</string>
    <string name="privacy_policy_terms_amp_conditions"><![CDATA[Privacy Policy / Terms & Conditions]]></string>
    <string name="contact_us">Contact Us</string>
    <string name="enter_my_score">CHOOSE YOUR SCORE</string>
    <string name="congratulations">Congratulations!</string>
    <string name="you_finished_this_video">Video Completed</string>
    <string name="ok">OK</string>
    <string name="in_pain_tooltip">\nIn pain or want to mobilize a specific body part? Click on the area of your body that hurts to get your personal pain prescription.</string>
    <string name="skip">Skip</string>
    <string name="workouts">Workouts</string>
    <string name="today_s_pre_workout_video">Today\'s Pre-Workout Video</string>
    <string name="movement_guide">Movement Guide</string>
    <string name="today_s_post_workout_videos">Today\'s Post-Workout Videos</string>
    <string name="more_points_more_fun">More points more fun</string>
    <string name="more_points_more_fun_message"><![CDATA[Watch a video or join our mini Q&A to earn some points]]></string>
    <string name="workouts_sports">Workouts/Sports</string>
    <string name="sports">Sports</string>
    <string name="archetypes">Archetypes</string>
    <string name="finish">FINISH</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">SIGN UP</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="let_s_take_a_look">Take A Sneak Peek</string>
    <string name="mobilize">Mobilize</string>
    <string name="my_mobility_score">My Mobility Score</string>
    <string name="trs_gear">Virtual Mobility Coach Gear</string>
    <string name="bonus_content">Bonus Content</string>
    <string name="pain_body_part">Pain / Body Part</string>
    <string name="test_my_mobility">TEST MY MOBILITY</string>
    <string name="daily_maintenance">Daily Maintenance</string>
    <string name="go_to_my_mobility_plan">GO TO MY MOBILITY PLAN</string>
    <string name="search_all_videos">Search</string>
    <string name="maintain_your_mobility_will_today_s_guided_featured_video_or_choose_your_own_from_the_library_below">Maintain your mobility with today\'s guided featured video, or choose your own from the library below.</string>
    <string name="filter_by_focus_area_and_or_time">FILTER BY FOCUS AREA &amp; TIME</string>
    <string name="related_videos">Related Videos</string>
    <string name="best_sellers">Best Sellers</string>
    <string name="duration">Duration</string>
    <string name="search">Search</string>
    <string name="filter_btn">FILTER</string>
    <string name="search_results">Search Results</string>
    <string name="results">Results</string>
    <string name="streaks">Streaks</string>
    <string name="sign_up_lap">SIGN UP</string>
    <string name="start_your_free_trial">Start Your Free Trial</string>
    <string name="trunk">Trunk</string>
    <string name="today_suggested_videos">Today\'s Suggested Videos</string>
    <string name="proceed">Proceed</string>
    <string name="confirm_logout">Confirm Logout</string>
    <string name="confirm_logout_content">Are you sure you want to log out?</string>
    <string name="maintenances">Maintenances</string>
    <string name="related_post_videos">Related Videos</string>
    <string name="subscription_date">Subscription Date</string>
    <string name="go_to_my_mobility">Go to Mobility Page</string>
    <string name="cancel_subscription">Cancel my membership</string>
    <string name="front">Front</string>
    <string name="back">Back</string>
    <string name="reminder">Reminder</string>
    <string name="reminder_message">It\'s time to do your post-workout mobilizations!</string>
    <string name="reminder_iap_message">Your subscription has ended. Please upgrade or renew your subscription to continue using the full version of the App.</string>
    <string name="your_streak_day">You’re On A %d Days Streak!</string>
    <string name="your_streak_message">Continue coming back to mobilize every day for %d days in a row to earn your next badge</string>
    <string name="congratulation">Congratulations!</string>
    <string name="achievement_congrat_message">Congratulations on improving your mobility for %d days in a row. Keep up the great work!</string>
    <string name="milestone_points">%d points</string>
    <string name="i_m_about_to_work_out_or_play_a_sport">I\'m about to work out or play a sport</string>
    <string name="i_d_like_to_do_the_daily_maintenance">I\'d like to do the Daily Maintenance</string>
    <string name="maintenance_videos">Maintenance Videos</string>
    <string name="view_all">View All</string>
    <string name="congratulations_you_have_completed_the_test">Congratulations! You Have Completed The Test.</string>
    <string name="take_the_mobility_test">TEST MY MOBILITY</string>
    <string name="let_s_get_to_know_a_little_bit_about_you">Let’s get to know a little bit about you!</string>
    <string name="what_s_your_gender">What\'s your gender?</string>
    <string name="prep_recover">Prep/Recover</string>
    <string name="by_workout">By Workout</string>
    <string name="by_sport">By Sport</string>
    <string name="by_archetype">By Archetype</string>
    <string name="i_want_to_prepare_or_recover_from_a_workout_or_sport">I want to prepare or recover from a workout or sport</string>
    <string name="i_want_to_take_the_mobility_test">I want to take the mobility test</string>
    <string name="use_the_lite_version">Use The Lite Version</string>
    <string name="unlock_the_full_version">UNLOCK THE FULL VERSION</string>
    <string name="favorites">Favorites</string>
    <string name="check_your_body_mobility_today">Check your body\'s mobility today.</string>
    <string name="looking_for_something_specific">Looking For Something Specific?</string>
    <string name="watch_later">WATCH LATER</string>
    <string name="my_mobility_plan">My Mobility Plan</string>
    <string name="what_would_you_like_to_do_today">What Would You Like To Do Today?</string>
    <string name="required_equipment">Required Equipment</string>
    <string name="coach_tips">Coach Tips</string>
    <string name="see_more">See More</string>
    <string name="membership_package">Membership Package</string>
    <string name="_3_days_free_trial">3 days free trial</string>
    <string name="_14_days_free_trial">14 days free trial</string>
    <string name="there_are_currently_no_videos_available_please_check_back_later">There are currently no videos available. Please check back later.</string>
    <string name="rules_leaderboard_of_the_ready_state">Leaderboard Rules</string>
    <string name="let_s_join_our_activity_and_get_the_change_to_be_on_the_50_top_members">Increase your activity in the App for the chance at a spot in our Top 50 Members ranking.</string>
    <string name="rules">Rules</string>
    <string name="worldwide_leaderboard_of_the_ready_state">Worldwide Leaderboard of Virtual Mobility Coach</string>
    <string name="free_14_days_trial">Free 14-Day Trial</string>
    <string name="free_3_days_trial">Free 3 days trial</string>
    <string name="search_old_mobility_header">Search The Entire Old MobilityWod Archive</string>
    <string name="btn_search_old_mobility">Search The Old MobilityWOD Archive</string>
    <string name="are_you_sure_title">Are you sure?</string>
    <string name="price_alert_skip_message">You will have access to the Lite version only. Upgrade to a plan in your profile settings to use all features.</string>
    <string name="which_plan_do_you_want_after_your_free_trial">Which plan do you want after your free trial?</string>
    <string name="which_plan_do_you_want">Which plan do you want after your free two week trial?</string>
    <string name="pain_body_part_menu">Pain-Body Part</string>
    <string name="mobility_test">Mobility Test</string>
    <string name="daily_menu">Daily</string>
    <string name="hey_title">Hey!</string>
    <string name="dialog_confirm_close_test_message">Going back will require you to enter a new score. Are you sure?</string>
    <string name="continue_the_test_message">Continue the Test</string>
    <string name="im_sure_message">I\'m sure</string>
    <string name="create_your_free_account">CREATE YOUR FREE ACCOUNT</string>
    <string name="how_often_do_you_currently_stretch_do_mobility_exercises">How often do you currently stretch / do mobility exercises?</string>
    <string name="newbie_n_0_1_days_a_week">Newbie</string>
    <string name="intermediate">Intermediate</string>
    <string name="expert_n_every_day">Expert</string>
    <string name="_0_1_days_a_week">(0-1 days a week)</string>
    <string name="every_day">(Every day)</string>
    <string name="non_binary">Non-binary</string>
    <string name="prefer_not_to_say">Prefer Not To Say</string>
    <string name="warm_up">Warm Up</string>
    <string name="change_password">Change Password</string>
    <string name="your_new_password_must_be_different_from_the_previous_used_passwords">Your new password must be different from the previous used passwords.</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="change_password_successfully">Change password successfully!</string>
    <string name="monthly_subscription_plan">Monthly Subscription Plan</string>
    <string name="annually_subscription_plan">Annually Subscription Plan</string>
    <string name="message_equipment_popup">The minimum equipment you need to do this program is a foam roller and lacrosse ball, so those are preselected for you</string>
    <string name="notification">Notification</string>
    <string name="message">Message</string>
    <string name="message_equipment_popup_clear_all">The minimum equipment you need is foam roller and lacrosse ball</string>
    <string name="downloaded_message_not_empty">Hey! It looks like you’re currently offline. Please find your downloaded videos here!</string>
    <string name="downloaded_message_empty">Sorry! It looks like you’re currently offline and do not have any downloaded videos in your account. Please try again when you’re back online.</string>
    <string name="btn_done">DONE</string>
    <string name="btn_next">NEXT</string>
    <string name="btn_confirm">CONFIRM</string>
    <string name="continue_test_message">You completed your mobility test for %d of 4 focus areas. Please finish the rest to see all of your scores below!</string>
    <string name="incomplete">Incomplete</string>
</resources>