<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:tools="http://schemas.android.com/tools"
        android:background="@color/color_black"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
            android:id="@+id/iv_background"
            app:layout_constraintDimensionRatio="H, 1:0.8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            tools:src="@drawable/iv_quiz_how_often" />

    <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/fade_image_background"
            app:layout_constraintDimensionRatio="H, 1:0.8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_gravity="bottom"
            android:gravity="center_horizontal"
            android:orientation="vertical">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/hurme_geometric_sans2_bold"
                android:gravity="center_horizontal"
                android:text="@string/how_often_do_you_currently_stretch_do_mobility_exercises"
                android:textColor="#ffffff"
                android:textSize="27sp" />

        <FrameLayout
                android:id="@+id/exp_quiz_1"
                android:layout_width="match_parent"
                android:layout_height="53dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/quiz_item_transparent_selector_bg">

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/hurme_geometric_sans2_semi_bold"
                        android:gravity="center"
                        android:lineSpacingExtra="0sp"
                        android:text="@string/newbie_n_0_1_days_a_week"
                        android:textColor="#ffffff"
                        android:textSize="14sp" />

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/hurme_geometric_sans1"
                        android:lineSpacingExtra="0sp"
                        android:text="@string/_0_1_days_a_week"
                        android:textColor="#ffffff"
                        android:textSize="12sp" />
            </LinearLayout>
        </FrameLayout>


        <FrameLayout
                android:id="@+id/exp_quiz_2"
                android:layout_width="match_parent"
                android:layout_height="53dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/quiz_item_transparent_selector_bg">

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/hurme_geometric_sans1_semi_bold"
                        android:gravity="center"
                        android:lineSpacingExtra="0sp"
                        android:text="@string/intermediate"
                        android:textColor="#ffffff"
                        android:textSize="14sp" />
            </LinearLayout>
        </FrameLayout>

        <FrameLayout
                android:id="@+id/exp_quiz_3"
                android:layout_width="match_parent"
                android:layout_height="53dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/quiz_item_transparent_selector_bg">

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginEnd="30dp"
                        android:fontFamily="@font/hurme_geometric_sans1_semi_bold"
                        android:gravity="center"
                        android:lineSpacingExtra="0sp"
                        android:text="@string/expert_n_every_day"
                        android:textColor="#ffffff"
                        android:textSize="14sp" />

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/hurme_geometric_sans1"
                        android:lineSpacingExtra="0sp"
                        android:text="@string/every_day"
                        android:textColor="#ffffff"
                        android:textSize="12sp" />
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>