<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:paddingStart="50dp"
            android:paddingEnd="50dp"
            app:layout_constraintBottom_toTopOf="@id/btnOk"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <TextView
                android:id="@+id/empty_text_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/hurme_geometric_sans1_bold"
                android:gravity="center"
                android:text="@string/rules_leaderboard_of_the_ready_state"
                android:textColor="@color/color_text"
                android:textSize="14sp" />

        <TextView
                android:id="@+id/empty_text_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/hurme_geometric_sans1"
                android:gravity="center"
                android:text="@string/let_s_join_our_activity_and_get_the_change_to_be_on_the_50_top_members"
                android:textColor="@color/color_text_secondary"
                android:textSize="14sp" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/leaderboard_recylerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <Button
            android:id="@+id/btnOk"
            style="@style/common_btn_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/hurme_geometric_sans1_bold"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/ok"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>